# skillctl

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml  skillctl.catalog.json  skillctl.config.example.json  skillctl.config.json  skillctl.repo-references.json  tsconfig.base.json
.github/: release.yml
.github/workflows/: release-mac.yml
apps/electron/: electron-builder.config.mjs  electron-builder.yml  electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.node.json
apps/electron/scripts/: notarize.cjs
apps/electron/src/: index.ts
docs/: macos-release-secrets.md
manifests/: README.md
manifests/schemas/: skillctl.catalog.schema.json  skillctl.config.schema.json  skillctl.repo-references.schema.json
scripts/: release-tag.mjs  release-version.mjs
skills/agent-infra/agent-process-monitor/: SKILL.md
skills/agent-infra/anyrouter-config/: SKILL.md
skills/agent-infra/codex-config-health/: SKILL.md
skills/agent-infra/codex-session-recovery/: SKILL.md
skills/agent-infra/dap-handoff-writer/: SKILL.md
skills/agent-infra/find-skills/: SKILL.md
skills/agent-infra/hermes-issue-triage/: SKILL.md
skills/agent-infra/hermes-upstream-worktree-fix/: SKILL.md
skills/agent-infra/omx-project-scope-git-isolation/: SKILL.md
skills/agent-infra/plan/: SKILL.md
skills/agent-infra/ralph/: SKILL.md
skills/agent-infra/ralplan/: SKILL.md
skills/agent-infra/watch-hot-node/daemon/: Cargo.toml
skills/agent-infra/watch-hot-node/daemon/src/: main.rs
tests/: test_agent_process_monitor_manager.py  test_collect_inventory.py
(+178 files in other folders)
